[gd_scene load_steps=6 format=3 uid="uid://dh2x4lam7r3nq"]

[ext_resource type="Script" uid="uid://cbokll8tka1pe" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://b3m7yx5k2e1qp" path="res://scenes/tile_grid.tscn" id="2_grid"]
[ext_resource type="PackedScene" path="res://scenes/player.tscn" id="3_player"]
[ext_resource type="PackedScene" path="res://scenes/base.tscn" id="4_base"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shop"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0784314, 0.101961, 0.160784, 0.97)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.286275, 0.352941, 0.470588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 700.0
offset_bottom = 1200.0
color = Color(0.0392157, 0.0588235, 0.101961, 1)

[node name="TileGrid" parent="." instance=ExtResource("2_grid")]

[node name="Turrets" type="Node2D" parent="."]

[node name="Base" parent="." instance=ExtResource("4_base")]

[node name="Enemies" type="Node2D" parent="."]

[node name="Bots" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_player")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CoinLabel" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.980392, 0.835294, 0.298039, 1)
theme_override_font_sizes/font_size = 18
text = "ü™ô 0"

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 160.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.341176, 0.803922, 0.298039, 1)
theme_override_font_sizes/font_size = 18
text = "‚ù§Ô∏è 100/100"

[node name="BaseHealthLabel" type="Label" parent="UI"]
offset_left = 330.0
offset_top = 8.0
offset_right = 500.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.580392, 0.639216, 0.721569, 1)
theme_override_font_sizes/font_size = 16
text = "üè∞ 500/500"

[node name="CarryLabel" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.580392, 0.639216, 0.721569, 1)
theme_override_font_sizes/font_size = 12
text = "Tap to move"

[node name="ShopToggleBtn" type="Button" parent="UI"]
offset_left = 590.0
offset_top = 6.0
offset_right = 688.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 13
text = "üõí Shop"

[node name="StatsToggleBtn" type="Button" parent="UI"]
offset_left = 500.0
offset_top = 6.0
offset_right = 585.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 13
text = "üìä Stats"

[node name="ShopPanel" type="PanelContainer" parent="UI"]
visible = false
offset_left = 20.0
offset_top = 44.0
offset_right = 680.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_shop")

[node name="VBox" type="VBoxContainer" parent="UI/ShopPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TabButtons" type="HBoxContainer" parent="UI/ShopPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContentArea" type="ScrollContainer" parent="UI/ShopPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsPanel" type="PanelContainer" parent="UI"]
visible = false
offset_left = 200.0
offset_top = 44.0
offset_right = 500.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_shop")

[node name="VBox" type="VBoxContainer" parent="UI/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 4
